--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,18 +2,18 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
+      value: Jacquelyn Lopez
     - name: Date of Birth
-      value: 14th March 1879
+      value: 19th October 2000
     - name: Languages
-      value: English, German
+      value: English, Spanish
 
 - title: Education
   type: time_table
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+    - title: Bacheolor's of Science
+      institution: Worcester Polytechnic Institute (WPI), Worcester, MA
+      year: 2023
       description:
         - Description 1.
         - Description 2.
@@ -21,9 +21,9 @@
           contents:
             - Sub-description 1.
             - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
+    - title: High School Diploma
+      institution: Lindblom Math & Science Academy, Chicago, IL
+      year: 2019
       description:
         - Description 1.
         - Description 2.
@@ -71,10 +71,10 @@
 - title: Honors and Awards
   type: time_table
   contents:
-    - year: 1921
+    - year: 2023
       items: 
-        - Nobel Prize in Physics 
-        - Matteucci Medal
+        - Provost's MQP Award Honorable Mention
+        - Female Scholar of the Year
     - year: 2029
       items: 
         - Max Planck Medal
